--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
     "name": "hux-blog",
     "title": "Hux Blog",
     "version": "1.0.0",
-    "homepage": "http://wanggao1990.we/",
+    "homepage": "http://wanggao1990.io/",
     "author": "Hux",
     "devDependencies": {
         "grunt": "~0.4.5",
@@ -13,7 +13,7 @@
     },
     "repository": {
         "type": "git",
-        "url": "https://github.com/wanggao1990/wanggao1990.we.git"
+        "url": "https://github.com/wanggao1990/wanggao1990.io.git"
     },
     "scripts": {
         "preview": "cd _site; python -m SimpleHTTPServer 8020",
