--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
     "name": "hux-blog",
     "title": "Hux Blog",
     "version": "1.0.0",
-    "homepage": "http://wanggao1990.io/",
+    "homepage": "http://wanggao1990.github.io/",
     "author": "Hux",
     "devDependencies": {
         "grunt": "~0.4.5",
